tests/fixtures/invalid/undefined_tool.pi
# Error: Tool no declarada en task
project test

task query_db
   use undefined_tool
   goal query database
